Client side: add call to Amazon API and display results

--- a/web/index.html
+++ b/web/index.html
@@ -12,6 +12,7 @@
   </head>
   <body>
     <div id="content"></div>
+    <script type="text/javascript" src="dynamicData.js"></script>
     <script type="text/javascript" src="finderReactApp.js"></script>
   </body>
 </html>
